<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FilterFragment"
    app:cardCornerRadius="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/filter"/>

        <CheckBox
            android:id="@+id/filterAllCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:textColor="@color/black"/>

        <CheckBox
            android:id="@+id/filterCameraCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="2dp"
            android:text="@string/camera"
            android:textColor="@color/black"/>

        <CheckBox
            android:id="@+id/filterRadarCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="2dp"
            android:text="@string/radar"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_radius"
                android:textColor="@color/black"
                android:textSize="17dp"/>

            <com.google.android.material.slider.Slider
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="0"
                android:valueTo="60"
                android:value="10" />


        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>