<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    android:layout_margin="7dp"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="50dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:hint="@string/app_name"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:hint="@string/message"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_email"
                app:errorEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_label"
                style="@style/MyOutlinedBox">

                <EditText
                    android:id="@+id/login_editText_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTintMode="add"
                    android:inputType="textEmailAddress"
                    tools:ignore="TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_password"
                app:errorEnabled="true"
                app:endIconMode="password_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_label"
                style="@style/MyOutlinedBox">

                <EditText
                    android:id="@+id/login_editText_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTintMode="add"
                    android:inputType="textPassword"
                    tools:ignore="TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/login_button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_label"
                android:layout_margin="0sp"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/login_button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_new_account"
                android:textColor="@color/black"
                android:background="@android:color/transparent"
                android:layout_margin="0sp"
                android:textSize="15dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>