<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10sp"
    android:orientation="vertical"
    android:layout_margin="10sp"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RegisterFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5sp"
        android:layout_margin="13dp"
        android:gravity="center">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:cardCornerRadius="80dp"
            android:layout_marginBottom="15dp"
            app:strokeWidth="3sp"
            android:layout_gravity="center_horizontal"
            android:backgroundTintMode="src_in">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/register_imageView_profile_photo"
                    android:contentDescription="User profile photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:translationZ="2sp"
                    android:outlineProvider="bounds"/>


                <Button
                    android:id="@+id/register_button_add_image"
                    android:layout_width="48sp"
                    android:layout_height="48sp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/ic_add_image"
                    android:clickable="false"
                    android:translationZ="1sp" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_username"
                app:errorEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_label"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/register_editText_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTintMode="add"
                    android:inputType="text"
                    tools:ignore="TouchTargetSizeCheck"
                    android:autofillHints="" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_Name"
                app:errorEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_label"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/register_editText_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTintMode="add"
                    android:inputType="textPersonName"
                    tools:ignore="TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_LastName"
                app:errorEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastname_label"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/register_editText_Lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTintMode="add"
                    android:inputType="textPersonName"
                    tools:ignore="TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_phone_number"
                app:errorEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number_label"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/register_editText_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTintMode="add"
                    android:inputType="phone"
                    tools:ignore="TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_email"
                app:errorEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_label"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/register_editText_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTintMode="add"
                    android:inputType="textEmailAddress"
                    tools:ignore="TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_password"
                app:errorEnabled="true"
                app:endIconMode="password_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_label"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/register_editText_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTintMode="add"
                    android:inputType="textPassword"
                    tools:ignore="TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_Confirmpassword"
                app:errorEnabled="true"
                app:endIconMode="password_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Confirmpassword_label"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/register_editText_Confirmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTintMode="add"
                    android:inputType="textPassword"
                    tools:ignore="TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/register_button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_label"
                android:layout_margin="0sp"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/register_button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account_label"
                android:textColor="@color/black"
                android:background="@android:color/transparent"
                android:textSize="15sp"/>

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>