<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp"
    android:orientation="vertical"
    android:layout_margin="10sp"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AddDeviceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5sp"
        android:layout_margin="10sp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_Title"
                app:errorEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_device_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/add_device_editText_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTintMode="add"
                    tools:ignore="TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_description"
                app:errorEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_device_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/add_device_editText_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTintMode="add"
                    tools:ignore="TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dropdown_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prompt_message"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <Spinner
                    android:id="@+id/add_device_dropdown_menu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:entries="@array/add_device_dropdown_options"
                    android:prompt="@string/prompt_message" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_device_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:text="@string/add_device"
                android:textSize="20sp" />

            <Button
                android:id="@+id/add_device_cancle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:text="@string/cancle_device"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>