<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RangListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="130dp"
                android:layout_height="130dp"
                app:cardCornerRadius="40dp"
                app:strokeWidth="3sp"
                android:layout_gravity="center_vertical"
                android:backgroundTintMode="src_in"
                android:layout_marginStart="5dp">

                <ImageView
                    android:id="@+id/profile_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:background="@drawable/ic_profile"
                    android:outlineProvider="bounds"
                    android:scaleType="centerCrop"
                    android:translationZ="2sp" />
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="216dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tvCurrentUserame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Username"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvCurrentName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="Name"
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/tvCurrentLastName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Last name"
                        android:textColor="@color/black"
                        android:textSize="16dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/tvCurrentEmailValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Email"
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/phone"
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/tvCurrentPhoneValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Phone"
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/points"
                        android:textColor="@color/black"
                        android:textSize="14dp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/tvCurrentPointsValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="No.Points"
                        android:textColor="@color/black"
                        android:textSize="14dp"
                        android:textStyle="italic" />

                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end">

                <Button
                    android:id="@+id/rang_list_my_devices"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/ic_my_locations" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/rang_list"
                android:layout_marginTop="5dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rangList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>